--- a/src/scss/page/_work.scss
+++ b/src/scss/page/_work.scss
@@ -9,6 +9,7 @@ body.work {
 
     .project-gallery {
         display: grid;
+        align-items: flex-start;
         grid-template-columns: repeat(auto-fill, minmax(rem-calc(350), 1fr));
         position: relative;
         grid-gap: rem-calc(98);
@@ -40,7 +41,7 @@ body.work {
         }
 
         @include breakpoint(xxlarge only) {
-            grid-template-columns: repeat(auto-fill, minmax(rem-calc(280), 1fr));
+            grid-template-columns: repeat(auto-fill, minmax(rem-calc(320), 1fr));
         }
 
         .gallery-item {
